--- a/ASPColoradoBestCars/Views/Home/Index.cshtml
+++ b/ASPColoradoBestCars/Views/Home/Index.cshtml
@@ -5,16 +5,25 @@
 @model CarProperty
 
 <div class="text-center">
-    <h1 class="display-4">Welcome To Colorado</h1>
+    <h1 class="display-4">Welcome To Eddie's Car Recommendations For Colorado</h1>
+    <br />
     
-    <h2>Here Are The Vehicles I Recommend For Colorado!</h2>
     
+    <body1>
+        <div class="container">
+            <div class="ring"></div>
+            <div class="ring"></div>
+            <div class="ring"></div>
+            <p2></p2>
+        </div>
+    </body1>
     
 
     @using (Html.BeginForm("ViewCar", "Home", "Post"))
-{
+    {
     <div class="form-group">
-        <label for="">Select a Make</label>
+        <label for="">Select a Vehicle</label>
+        <br/>
         <select class="form-control" name="Make" value="">
             @foreach (var cat in Model.options)
             {
@@ -22,19 +31,14 @@
             }
         </select>
     </div>
+    <br />
+    <input type="submit" value="Submit Choice" class="btn btn-primary" />
     
+  
     
-    
-  @*  <body1>
-    <div class="container">
-        <div class="ring"></div>
-        <div class="ring"></div>
-        <div class="ring"></div>
-        <p2></p2>
-    </div>
-</body1>*@
-<input type="submit" value="Submit Choice" class="btn btn-primary" />
     
 
-}
+    
+
+    }
 </div>
